# yule-studio-agent

./: .env.example  .gitignore  .gitmessage.txt  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: -feature--issue-template.md
agents/coding-agent/: CLAUDE.md  agent.json
agents/engineering-agent/: CLAUDE.md  agent.json
agents/planning-agent/: CLAUDE.md  agent.json
scripts/: bootstrap
tests/: _bootstrap.py  test_agent_dispatcher.py  test_agent_message.py  test_agent_runners.py  test_agent_workflow.py  test_calendar_cache_policy.py  test_calendar_categories_cli.py  test_calendar_category_color.py  test_cli_obsidian_sync.py  test_daily_warmup.py  test_discord_bot_runtime.py  test_discord_commands.py  test_discord_config.py  test_discord_conversation.py  test_discord_engineering_commands.py  test_discord_formatter.py  test_discord_member_bots.py  test_discord_research_forum.py  test_discord_schedule.py  test_discord_supervisor.py  test_doctor.py  test_e2e_calendar_to_discord.py  test_engineering_channel_router.py  test_engineering_conversation.py  test_engineering_deliberation.py  test_engineering_research_loop_hook.py  test_engineering_team_runtime.py  test_github_issue_cache.py  test_local_cache.py  test_obsidian_export.py  test_obsidian_git.py  test_obsidian_writer.py  test_ollama_config.py  test_ollama_runtime.py  test_planning_category_policy.py  test_planning_inputs.py  test_planning_planner.py  test_planning_snapshots.py  test_research_collector.py  test_research_loop.py  (+7 more)
(+154 files in other folders)
